NEW - bug 344502: Update the website to point to the nightly update site https://bugs.eclipse.org/bugs/show_bug.cgi?id=344502

--- a/new/new.html
+++ b/new/new.html
@@ -16,15 +16,31 @@
 		<i>Apr 22, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<font size="1">13</font><br><font size="1">bugs</font></td>
-		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service release.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.5.1">Mylyn 3.5.1</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.7.1">Mylyn Builds 0.7</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.5.1">Mylyn Commons 3.5.1</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.5.1">Mylyn Context 3.5.1</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.5.1">Mylyn Tasks 3.5.1</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.7.1">Mylyn Versions 0.7.1</a>
+		</font></td>
 	</tr>
 	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.5<br>
 		<i>March 16, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
-		<a href="/doc/mylyn/plan-3.5.html">
+		<a href="/mylyn/doc/plan-3.5.html">
 		<font size="1">350</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1">Sam Davis and Thomas Ehrnhoefer provided several enhancements and bug fixes. Markus Knittig contributed the initial implementation of the Hudson/Jenkins connector. Additional contributions were provided by Charley Wang, Pawel Niewiadomski, Kevin Sawicki and David Shepherd.</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Sam Davis and Thomas Ehrnhoefer provided several enhancements and bug fixes. Markus Knittig contributed the initial implementation of the Hudson/Jenkins connector. Additional contributions were provided by Charley Wang, Pawel Niewiadomski, Kevin Sawicki and David Shepherd.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.5">Mylyn 3.5</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.7">Mylyn Builds 0.7</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.5">Mylyn Commons 3.5</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.5">Mylyn Context 3.5</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.5">Mylyn Tasks 3.5</a>
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.7">Mylyn Versions 0.7</a>
+		</font></td>
 	</tr>
 </table>
 
