RESOLVED - bug 343426: [release] plan Mylyn 3.5.1 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=343426

--- a/new/new.html
+++ b/new/new.html
@@ -19,9 +19,10 @@
 		<td bgcolor="#FAF7FB"><font size="1">Service release.
 			<br>Includes: 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.5.1">Mylyn 3.5.1</a>, 
-			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.7.1">Mylyn Builds 0.7</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.7.1">Mylyn Builds 0.7.1</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.5.1">Mylyn Commons 3.5.1</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.5.1">Mylyn Context 3.5.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.4.1">Mylyn Docs 1.4.1</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.5.1">Mylyn Tasks 3.5.1</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.7.1">Mylyn Versions 0.7.1</a>.
 		</font></td>
@@ -38,6 +39,7 @@
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.7">Mylyn Builds 0.7</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.5">Mylyn Commons 3.5</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.5">Mylyn Context 3.5</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.4.0">Mylyn Docs 1.4</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.5">Mylyn Tasks 3.5</a>,
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.7">Mylyn Versions 0.7</a>.
 		</font></td>
