--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -109,6 +109,19 @@
 		<hr>
 		</td>
 	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task-Focused Interface: View Any Context</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Sam Davis contributed a feature that enables viewing of the context of any task and not just the active task.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
 </table>
 
 <h4>Mylyn Reviews</h4>
@@ -127,8 +140,22 @@
 		<p align="right"><b>Gerrit Connector (Incubation): Fetch Patch Sets</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Patch sets can now be fetched into the local workspace directly from the review editor.</p>
+		<p align="left">Patch sets can be fetched into the local workspace directly from the review editor.</p>
 		<p><img border="0" src="images/3.6/gerrit-fetch-patchset.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit Connector (Incubation): Add Comments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Comments can be added to a review through the context menu of the compare editor.</p>
+		<p><img border="0" src="images/3.6/gerrit-add-comment.png"></p>
 		</td>
 	</tr>
 	<tr>
