--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -69,7 +69,7 @@
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Task Editor: Content type specific icons</b></p>
+		<p align="right"><b>Task Editor: Delayed Screenshots</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Benjamin Muskalla contributed a feature to support taking delayed screenshots.</p>
