--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -55,6 +55,48 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla Connector: Private Comments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Private comments are displayed in the Task Editor indicated by a cursive font in the header and a tooltip. 
+		<p><img border="0" src="images/3.6/bugzilla-private-comments.jpg"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Automatic Context Population</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">When tasks are activated that contain stack traces the context is automatically populated based on the methods listed in the stack trace.
+		<p><img border="0" src="images/3.6/context-from-stack-trace.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac Connector: Certificate Authentication</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Torsten Kalix contributed support for certificate authentication. A keystore can be configured in the task repository settings.
+		<p><img border="0" src="images/3.6/trac-certificate-authentication.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Task Editor: Gravatars</b></p>
 		</td>
 		<td valign="top" width="85%">
