NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -19,7 +19,7 @@
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="/mylyn/doc/plan-3.6.html">
 		<font size="1">91</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">.
+		<td bgcolor="#E0D0E6"><font size="1">Sam Davis provided several enhancements for the Tasks and Context frameworks, Kevin Sawicki contributed Gravatar support, Torsten Kalix contributed support for certificate authentication and Mike Wu provided a bug fix.
 			<br>Includes: 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.6">Mylyn 3.6</a>, 
 			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.8">Mylyn Builds 0.8</a>, 
