--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -123,7 +123,7 @@
 		<p align="right"><b>Delayed Capturing of Screenshots</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">A delayed can be specified when taking screenshots.</p>
+		<p align="left">A delay can be specified when taking screenshots.</p>
 		<p><img border="0" src="images/3.6/task-editor-delayed-screenshot.png"></p>
 		</td>
 	</tr>
@@ -540,7 +540,7 @@
 		<p align="right"><b>Custom Workflow Support</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Bugzilla supports <a href="http://wiki.eclipse.org/index.php/Mylyn/User_Guide">configuration of custom workflows</a>.</p>
+		<p align="left">Bugzilla supports <a href="http://wiki.eclipse.org/Mylyn/Bugzilla_Connector#Custom_Transitions">configuration of custom workflows</a>.</p>
 		<p><img border="0" src="images/3.5/bugzilla-custom-workflow.png"></p>
 		</td>
 	</tr>
@@ -558,6 +558,20 @@
 		<td valign="top" width="85%">
 		<p align="left">A keystore can be configured in the task repository settings for certificate authentication.
 		<p><img border="0" src="images/3.6/trac-certificate-authentication.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task History</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The history of changes of a Trac task can be shown through selecting the task in the Task List and using the Navigate > Show In > History (requires XML-RPC).
+		<p><img border="0" src="images/3.6/trac-history.png"></p>
 		</td>
 	</tr>
 	<tr>
