NEW - bug 338264: [release] plan Mylyn 3.6 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=338264

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -150,6 +150,22 @@
 
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Update Notifications</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Notifications are displayed in the Task List when new connectors or Mylyn releases are available.</p>
+		<p><img border="0" src="images/3.6/tasks-update-message.png"></p>
+		<p align="left">Update notifications are opt-in and need to be enabled through the connector portal.</p>
+		<p><img border="0" src="images/3.6/tasks-update-notifications.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>Filter Tasks not Matching Queries</b></p>
 		</td>
