RESOLVED - bug 338264: [release] plan Mylyn 3.6 release https://bugs.eclipse.org/bugs/show_bug.cgi?id=338264

--- a/new/new.html
+++ b/new/new.html
@@ -89,13 +89,13 @@
 	<li><a href="#framework">Framework and API</a></li>
 </ul>
 
-<p><b>Note: </b>The Mylyn update sites has moved:</p>
+<p><b>Note: </b>The Mylyn repository has moved (see <a href="/mylyn/downloads/">download page</a> for additional locations):</p>
 
 <ul>
 	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/latest</b></li>
 </ul>
 
-<p>See the <a href="/mylyn/downloads/">download page</a> for additional locations. <p>Mylyn 3.5 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436"><b>Eclipse 3.5 or later</b></a>.</p>
+<p>Mylyn 3.6 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436"><b>Eclipse 3.5 or later</b></a>.</p> 
 
 <hr>
 
