--- a/new/new.html
+++ b/new/new.html
@@ -309,7 +309,7 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
-		<p align="right"><b>Hudson/Jenkins Connector (Incubation)</b></p>
+		<p align="right"><b>Builds View</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The Hudson connector which also supports Jenkins shows
