--- a/new/new.html
+++ b/new/new.html
@@ -12,6 +12,22 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.6.1<br>
+		<i>Aug 9, 2011</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">13</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service release.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.6.1">Mylyn 3.6.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.8.1">Mylyn Builds 0.8.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.6.1">Mylyn Commons 3.6.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.6.1">Mylyn Context 3.6.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.5.1">Mylyn Docs 1.5.1</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.6.1">Mylyn Tasks 3.6.1</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.8.1">Mylyn Versions 0.8.1</a>.
+		</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#E0D0E6"><font size="1">3.6<br>
 		<i>Jun 22, 2011</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
