NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -31,6 +31,64 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla Connector: Embedded Progress in Search Page</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The progress bar for refreshing the repository configuration is embedded in the Bugzilla search page allowing to navigate while a refresh is in progress.</p>
+		<p><img border="0" src="images/3.7/bugzilla-search-page.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Trac Connector: Streamlined Search and Query Pages</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The layout of the Trac query page has been streamlined and is more consistent with the Bugzilla query page.</p>
+		<p><img border="0" src="images/3.7/trac-query-page.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Tasks: Improved Query Page API</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">An enhanced query and search page abstraction is available in <code>AbstractRepositoryQueryPage2</code>. Refresh and Clear buttons are provided by the framework for refreshing the repository configuration and clearing fields.
+		Additionally, state is automatically persisted for search pages. See <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=310059" target="_new">bug 310059</a>.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Gerrit Connector: Compare Patch Sets in Synchronize View</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The review editor show a button below each patch set to compare it with other patch sets.</p>
+		<p><img border="0" src="images/3.7/gerrit-compare-patch-set-button.png"></p>
+		<p>Changes are opened in the Synchronize view making it very easy to navigate through changed files.</p>
+		<p><img border="0" src="images/3.7/gerrit-open-in-sync-view.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Hudson Connector: Hierarchical View of Artifacts</b></p>
 		</td>
 		<td valign="top" width="85%">
@@ -101,7 +159,7 @@
 		<p align="right"><b>Tasks Framework: Task Activation Listener Extension Point</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The Tasks framework has an extension point for registering task activation listeners: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=349924">bug 349924</a>.</p>
+		<p align="left">The Tasks framework has an extension point for registering task activation listeners: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=349924" target="_new">bug 349924</a>.</p>
 		</td>
 	</tr>
 	<tr>
@@ -114,7 +172,7 @@
 		<p align="right"><b>Incubator: Query API for Desktop Search</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The desktop search integration in the Incubator has API for constructing search queries: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=354430">bug 354430</a>.</p>
+		<p align="left">The desktop search integration in the Incubator has API for constructing search queries: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=354430" target="_new">bug 354430</a>.</p>
 		</td>
 	</tr>
 	<tr>
