NEW - bug 336131: update weekly New & Noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=336131

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -31,6 +31,33 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Task Editor: Filter Obsolete Attachments</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The attachments section has a toolbar for filtering obsolete attachments.</p>
+		<p><img border="0" src="images/3.7/task-editor-filter-obsolete-attachments.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Bugzilla Connector: Custom Priority Levels</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Custom priority levels are mapped in the Task List.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
 		<p align="right"><b>Bugzilla Connector: Embedded Progress in Search Page</b></p>
 		</td>
 		<td valign="top" width="85%">
