--- a/new/new.html
+++ b/new/new.html
@@ -13,6 +13,22 @@
 	</tr>
 	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.6.3<br>
+		<i>Nov 18, 2011</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<font size="1">7</font><br><font size="1">bugs</font></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service release.
+			<br>Includes: 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.6.4">Mylyn 3.6.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=0.8.4">Mylyn Builds 0.8.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.6.4">Mylyn Commons 3.6.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.6.4">Mylyn Context 3.6.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.5.4">Mylyn Docs 1.5.4</a>, 
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.6.4">Mylyn Tasks 3.6.4</a>,
+			<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=0.8.4">Mylyn Versions 0.8.4</a>.
+		</font></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.6.3<br>
 		<i>Oct 26, 2011</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<font size="1">6</font><br><font size="1">bugs</font></td>
